--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <title>笑笑 · 生日快乐</title>
 </head>
 <body>
@@ -16,54 +16,62 @@
         <div class="swiper-wrapper">
             <div class="page-1 page swiper-slide">
                 <div class="filter"></div>
-                <span v-animate="animated bounceInDown">笑</span>
-                <img class="img-1" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_21.gif" alt="" v-animate="animated swing">   
-                <img class="img-1" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_44.gif" alt="" v-animate="animated bounceIn">  
-                <span v-animate="animated bounceInUp">农历2018年10月18日</span> 
+                <span swiper-animate-effect="bounceInDown" class="ani">笑</span>
+                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_21.gif" alt="" swiper-animate-effect="swing">   
+                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_44.gif" alt="" swiper-animate-effect="bounceIn">  
+                <span swiper-animate-effect="bounceInUp" class="ani">农历2018年10月18日</span> 
             </div>
             <div class="page-2 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/3.jpg" alt="" v-animate="animated bounceInLeft">     
-                <img class="img-2" src="./assets/1.jpg" alt="" v-animate="animated bounceInRight">
-                <img class="img-3" src="./assets/2.jpg" alt="" v-animate="animated bounceInLeft">
+                <img class="ani" src="./assets/3.jpg" alt="" swiper-animate-effect="bounceInLeft">     
+                <img class="ani" src="./assets/1.jpg" alt="" swiper-animate-effect="bounceInRight">
+                <img class="ani" src="./assets/2.jpg" alt="" swiper-animate-effect="bounceInLeft">
             </div>
             <div class="page-3 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/486588782386983111.jpg" alt="" v-animate="animated zoomIn"> 
+                <img class="ani" src="./assets/486588782386983111.jpg" alt="" swiper-animate-effect="zoomIn"> 
             </div>
             <div class="page-4 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/362458738353902347.jpg" alt="" v-animate="animated rollIn"> 
+                <img class="ani" src="./assets/362458738353902347.jpg" alt="" swiper-animate-effect="rollIn"> 
             </div>
             <div class="page-5 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/375726187900958593.jpg" alt="" v-animate="animated lightSpeedIn"> 
+                <img class="aniz" src="./assets/375726187900958593.jpg" alt="" swiper-animate-effect="lightSpeedIn"> 
             </div>
             <div class="page-6 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/1a1fde891ab21dbc1985c60c3df90e1.jpg" alt="" v-animate="animated flip"> 
+                <img class="aniz" src="./assets/1a1fde891ab21dbc1985c60c3df90e1.jpg" alt="" swiper-animate-effect="flip"> 
             </div>
             <div class="page-7 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/b3648329a6b85c493414cc0a855b23a.jpg" alt="" v-animate="animated rotateInDownRight"> 
+                <img class="aniz" src="./assets/b3648329a6b85c493414cc0a855b23a.jpg" alt="" swiper-animate-effect="rotateInDownRight"> 
             </div>
             <div class="page-8 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/8.jpg" alt="" v-animate="animated fadeInUp"> 
+                <img class="aniz" src="./assets/8.jpg" alt="" swiper-animate-effect="fadeInUp"> 
             </div>
             <div class="page-9 page swiper-slide">
                 <div class="filter"></div>
-                <img class="img-1" src="./assets/9.jpg" alt="" v-animate="animated flipInX"> 
+                <img class="aniz" src="./assets/9.jpg" alt="" swiper-animate-effect="flipInX"> 
             </div>
         </div>
     </div>
 </body>
 </html>
 <script src="js/jquery-1.11.2.min.js"></script>
+<script src="js/swiper.animate.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script>
 var mySwiper = new Swiper('.home', {
     autoplay: false,//可选选项，自动滑动
-    direction : 'vertical'
+    direction : 'vertical',
+    onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
+        swiperAnimateCache(swiper); //隐藏动画元素 
+        swiperAnimate(swiper); //初始化完成开始动画
+    }, 
+    onSlideChangeEnd: function(swiper){ 
+        swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
+    } 
 })
 </script>
