--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="
+        X-UA-Compatible" content="ie=edge">
     <script src="js/rem.js"></script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.min.css">
@@ -11,67 +13,136 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <title>笑笑 · 生日快乐</title>
 </head>
+
 <body>
     <div class="home">
         <div class="swiper-wrapper">
             <div class="page-1 page swiper-slide">
                 <div class="filter"></div>
                 <span swiper-animate-effect="bounceInDown" class="ani">笑</span>
-                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_21.gif" alt="" swiper-animate-effect="swing">   
-                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_44.gif" alt="" swiper-animate-effect="bounceIn">  
-                <span swiper-animate-effect="bounceInUp" class="ani">农历2018年10月18日</span> 
+                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_21.gif" alt=""
+                    swiper-animate-effect="swing">
+                <img class="ani" src="./assets/20180406153029_636f1a3665c9e1c894d8fe343fe9a8e9_44.gif" alt=""
+                    swiper-animate-effect="bounceIn">
+                <span swiper-animate-effect="bounceInUp" class="ani">农历2018年10月18日</span>
             </div>
             <div class="page-2 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/3.jpg" alt="" swiper-animate-effect="bounceInLeft">     
+                <img class="ani" src="./assets/3.jpg" alt="" swiper-animate-effect="bounceInLeft">
                 <img class="ani" src="./assets/1.jpg" alt="" swiper-animate-effect="bounceInRight">
                 <img class="ani" src="./assets/2.jpg" alt="" swiper-animate-effect="bounceInLeft">
             </div>
             <div class="page-3 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/486588782386983111.jpg" alt="" swiper-animate-effect="zoomIn"> 
+                <img class="ani" src="./assets/486588782386983111.jpg" alt="" swiper-animate-effect="zoomIn">
             </div>
             <div class="page-4 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/362458738353902347.jpg" alt="" swiper-animate-effect="rollIn"> 
+                <img class="ani" src="./assets/362458738353902347.jpg" alt="" swiper-animate-effect="rollIn">
             </div>
             <div class="page-5 page swiper-slide">
                 <div class="filter"></div>
-                <img class="aniz" src="./assets/375726187900958593.jpg" alt="" swiper-animate-effect="lightSpeedIn"> 
+                <img class="ani" src="./assets/375726187900958593.jpg" alt="" swiper-animate-effect="lightSpeedIn">
             </div>
             <div class="page-6 page swiper-slide">
                 <div class="filter"></div>
-                <img class="aniz" src="./assets/1a1fde891ab21dbc1985c60c3df90e1.jpg" alt="" swiper-animate-effect="flip"> 
+                <img class="ani" src="./assets/1a1fde891ab21dbc1985c60c3df90e1.jpg" alt="" swiper-animate-effect="flip">
             </div>
             <div class="page-7 page swiper-slide">
                 <div class="filter"></div>
-                <img class="aniz" src="./assets/b3648329a6b85c493414cc0a855b23a.jpg" alt="" swiper-animate-effect="rotateInDownRight"> 
+                <img class="ani" src="./assets/b3648329a6b85c493414cc0a855b23a.jpg" alt="" swiper-animate-effect="rotateInDownRight">
             </div>
             <div class="page-8 page swiper-slide">
                 <div class="filter"></div>
-                <img class="aniz" src="./assets/8.jpg" alt="" swiper-animate-effect="fadeInUp"> 
+                <img class="ani" src="./assets/8.jpg" alt="" swiper-animate-effect="fadeInUp">
             </div>
             <div class="page-9 page swiper-slide">
                 <div class="filter"></div>
-                <img class="aniz" src="./assets/9.jpg" alt="" swiper-animate-effect="flipInX"> 
+                <img class="ani" src="./assets/9.jpg" alt="" swiper-animate-effect="flipInX">
             </div>
         </div>
     </div>
+    <div class="number fadeInRight animated">1/9</div>
+    <canvas id="canvas1" height="520" width="300"></canvas>
+    <canvas id="canvas2" height="520" width="300"></canvas>
 </body>
+
 </html>
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/swiper.animate.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script>
-var mySwiper = new Swiper('.home', {
-    autoplay: false,//可选选项，自动滑动
-    direction : 'vertical',
-    onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
-        swiperAnimateCache(swiper); //隐藏动画元素 
-        swiperAnimate(swiper); //初始化完成开始动画
-    }, 
-    onSlideChangeEnd: function(swiper){ 
-        swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
-    } 
-})
+    var numshow = document.querySelector('.number');
+    var mySwiper = new Swiper('.home', {
+        autoplay: false,//可选选项，自动滑动
+        direction: 'vertical',
+        onInit: function (swiper) { //Swiper2.x的初始化是onFirstInit
+            swiperAnimateCache(swiper); //隐藏动画元素 
+            swiperAnimate(swiper); //初始化完成开始动画
+        },
+        onSlideChangeEnd: function (swiper) {
+            swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
+            numshow.innerHTML = (swiper.activeIndex + 1) * 1 + '/9';
+        }
+    })
+
+    //音频
+    var audio = new Audio();
+    audio.src = 'assets/audio/C400004FjJo32TISsY.mp3';   // songs[index]
+    audio.autoplay = true;
+    audio.loop = 'loop';
+
+    
+    var colors = ['red', 'orange', 'cyan']; // , 'purple' 'blue', 'green', 
+    var randomIndex1 = Math.floor(Math.random() * 3);
+    var randomIndex2 = Math.floor(Math.random() * 3);
+    color1 = colors[randomIndex1];
+    color2 = colors[randomIndex2];
+
+    function drawFreq() {
+        var canvas1 = document.getElementById('canvas1');
+        var cxt1 = canvas1.getContext('2d');
+        var canvas2 = document.getElementById('canvas2');
+        var cxt2 = canvas2.getContext('2d');
+        var AudioContext = window.AudioContext || window.webkitAudioContext;
+        var context = new AudioContext();
+        // 创建节点
+        var source = context.createMediaElementSource(audio);
+        var analyser = context.createAnalyser();
+        // 连接：source → analyser → destination
+        source.connect(analyser);
+        analyser.connect(context.destination);
+        var output = new Uint8Array(4);
+        (function drawFreqs() {
+            analyser.getByteFrequencyData(output);
+            cxt1.clearRect(0, 0, canvas1.width, canvas1.height);
+            cxt2.clearRect(0, 0, canvas2.width, canvas2.height);
+            var distance = 150;
+            for (let i = 0; i < 4; i++) {
+                var value1 = output[i] / 1.5; // <===获取数据 
+                var value2 = output[3 - i] / 1.5;
+                // 左边频谱
+                cxt1.beginPath();
+                cxt1.lineWidth = 50;
+                var y = i * distance + 30;
+                cxt1.moveTo(0, y);
+                cxt1.lineTo(value1, y);
+                cxt1.closePath();
+                cxt1.strokeStyle = color1;
+                cxt1.stroke();
+
+                // 右边频谱
+                cxt2.beginPath();
+                cxt2.lineWidth = 50;
+                cxt2.moveTo(canvas2.width, y);
+                cxt2.lineTo(canvas2.width - value2, y);
+                cxt2.closePath();
+                cxt2.strokeStyle = color2;
+                cxt2.stroke();
+            };
+            requestAnimationFrame(drawFreqs);
+        })();
+    }
+    drawFreq();
+
 </script>
