--- a/index.html
+++ b/index.html
@@ -49,19 +49,16 @@
             </div>
             <div class="page-7 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/b3648329a6b85c493414cc0a855b23a.jpg" alt="" swiper-animate-effect="rotateInDownRight">
+                <img class="ani" src="./assets/501278011559618614.jpg" alt="" swiper-animate-effect="rotateInDownRight">
+                <img class="ani" src="./assets/713203667169375777.jpg" alt="" swiper-animate-effect="rotateInUpLeft">
             </div>
             <div class="page-8 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/8.jpg" alt="" swiper-animate-effect="fadeInUp">
-            </div>
-            <div class="page-9 page swiper-slide">
-                <div class="filter"></div>
-                <img class="ani" src="./assets/9.jpg" alt="" swiper-animate-effect="flipInX">
+                <img class="ani" src="./assets/11.jpg" alt="" swiper-animate-effect="flipInX">
             </div>
         </div>
     </div>
-    <div class="number fadeInRight animated">1/9</div>
+    <div class="number fadeInRight animated">1/8</div>
     <canvas id="canvas1" height="520" width="300"></canvas>
     <canvas id="canvas2" height="520" width="300"></canvas>
 </body>
@@ -79,7 +76,7 @@
         },
         onSlideChangeEnd: function (swiper) {
             swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
-            numshow.innerHTML = (swiper.activeIndex + 1) * 1 + '/9';
+            numshow.innerHTML = (swiper.activeIndex + 1) * 1 + '/8';
         }
     })
 
