--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 </html>
 <script src="js/swiper.animate.min.js"></script>
 <script src="js/swiper.min.js"></script>
+<script src="js/wxapi.js"></script>
 <script>
     var numshow = document.querySelector('.number');
     var mySwiper = new Swiper('.home', {
