--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <div class="number fadeInRight animated">1/9</div>
     <canvas id="canvas1" height="520" width="300"></canvas>
     <canvas id="canvas2" height="520" width="300"></canvas>
+    <div class="loading-box">
+        <canvas id="loading" width="300" height="300"></canvas>
+    </div>
     <!-- <canvas id="sakura"></canvas> -->
 </body>
 
@@ -153,3 +156,4 @@
     }
     drawFreq(); 
 </script>
+<script src="js/loading.js"></script>
