--- a/index.html
+++ b/index.html
@@ -65,15 +65,17 @@
     <div class="number fadeInRight animated">1/9</div>
     <canvas id="canvas1" height="520" width="300"></canvas>
     <canvas id="canvas2" height="520" width="300"></canvas>
-    <div class="loading-box">
+    <!-- <div class="loading-box">
         <canvas id="loading" width="300" height="300"></canvas>
-    </div>
+    </div> -->
     <!-- <canvas id="sakura"></canvas> -->
 </body>
 
 </html>
 <script src="js/swiper.animate.min.js"></script>
 <script src="js/swiper.min.js"></script>
+
+<!-- <script src="js/loading.js"></script> -->
 <script>
     var numshow = document.querySelector('.number');
     var mySwiper = new Swiper('.home', {
@@ -156,4 +158,3 @@
     }
     drawFreq(); 
 </script>
-<script src="js/loading.js"></script>
