--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <title>华 & 丽 · 生日快乐</title>
+    <title>遇见 · 美丽的意外</title>
 </head>
 
 <body>
@@ -18,11 +18,11 @@
         <div class="swiper-wrapper">
             <div class="page-1 page swiper-slide">
                 <div class="filter"></div>
-                <span class="bir-time ani" swiper-animate-effect="fadeInLeft" swiper-animate-delay="0.5s">丽 · 农历2018年10月30日</span>
+                <!-- <span class="bir-time ani" swiper-animate-effect="fadeInLeft" swiper-animate-delay="0.5s">丽 · 农历2018年10月30日</span> -->
                 <img class="ani" src="./assets/13.jpg" alt="" swiper-animate-effect="bounceInDown">
-                <img class="ani" src="./assets/15.gif" alt="" swiper-animate-effect="swing">
+                <img class="ani" src="./assets/18.jpg" alt="" swiper-animate-effect="swing">
                 <img class="ani" src="./assets/17.jpg" alt="" swiper-animate-effect="bounceInUp">
-                <span class="bir-time ani" swiper-animate-effect="fadeInRight" swiper-animate-delay="0.5s">华 · 农历2018年11月04日</span>
+                <!-- <span class="bir-time ani" swiper-animate-effect="fadeInRight" swiper-animate-delay="0.5s">华 · 农历2018年11月04日</span> -->
             </div>
             <div class="page-2 page swiper-slide">
                 <div class="filter"></div>
@@ -93,9 +93,9 @@
 
     //音频
     var audio = new Audio();
-    var index = 0;
-    var songs = ['assets/audio/happy.mp3','assets/audio/C400001N8e5Q4Gjxda.mp3', 'assets/audio/C400004FjJo32TISsY.mp3', 'assets/audio/lost.mp3'];
-    audio.src = songs[0];   // songs[index]
+    var index = Math.floor(Math.random() * 4);
+    var songs = ['assets/audio/Friendships.mp3','assets/audio/C400001N8e5Q4Gjxda.mp3', 'assets/audio/C400004FjJo32TISsY.mp3', 'assets/audio/lost.mp3'];
+    audio.src = songs[index];   // songs[index]
     audio.autoplay = true;
 
     document.addEventListener("WeixinJSBridgeReady", function () {
