--- a/index.html
+++ b/index.html
@@ -10,65 +10,69 @@
     <link rel="stylesheet" href="css/index.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <script src="js/jquery-1.11.2.min.js"></script>
     <title>遇见 · 美丽的意外</title>
 </head>
 
 <body>
+    <div class="loading-box">
+        <img src="assets/loading.gif" alt="">
+    </div>
     <div class="home">
         <div class="swiper-wrapper">
             <div class="page-1 page swiper-slide">
                 <div class="filter"></div>
                 <!-- <span class="bir-time ani" swiper-animate-effect="fadeInLeft" swiper-animate-delay="0.5s">丽 · 农历2018年10月30日</span> -->
-                <img class="ani" src="./assets/13.jpg" alt="" swiper-animate-effect="bounceInDown">
-                <img class="ani" src="./assets/18.jpg" alt="" swiper-animate-effect="swing">
-                <img class="ani" src="./assets/17.jpg" alt="" swiper-animate-effect="bounceInUp">
+                <img class="ani" src="./assets/1.jpg" alt="" swiper-animate-effect="bounceInDown">
+                <img class="ani" src="./assets/2.jpg" alt="" swiper-animate-effect="swing">
+                <img class="ani" src="./assets/3.jpg" alt="" swiper-animate-effect="bounceInUp">
                 <!-- <span class="bir-time ani" swiper-animate-effect="fadeInRight" swiper-animate-delay="0.5s">华 · 农历2018年11月04日</span> -->
             </div>
-            <div class="page-2 page swiper-slide">
+            <!-- <div class="page-2 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/3.jpg" alt="" swiper-animate-effect="bounceInLeft">
-                <img class="ani" src="./assets/1.jpg" alt="" swiper-animate-effect="bounceInRight">
-                <img class="ani" src="./assets/2.jpg" alt="" swiper-animate-effect="bounceInLeft">
-            </div>
+                <img class="ani" src="./assets/4.jpg" alt="" swiper-animate-effect="bounceInLeft">
+                <img class="ani" src="./assets/5.jpg" alt="" swiper-animate-effect="bounceInRight">
+                <img class="ani" src="./assets/6.jpg" alt="" swiper-animate-effect="bounceInLeft">
+            </div> -->
             <div class="page-3 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/4.jpg" alt="" swiper-animate-effect="zoomIn">
+                <img class="ani" src="./assets/7.jpg" alt="" swiper-animate-effect="zoomIn">
             </div>
             <div class="page-4 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/5.jpg" alt="" swiper-animate-effect="rollIn">
+                <img class="ani" src="./assets/8.jpg" alt="" swiper-animate-effect="rollIn">
             </div>
             <div class="page-5 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/6.jpg" alt="" swiper-animate-effect="lightSpeedIn">
+                <img class="ani" src="./assets/9.jpg" alt="" swiper-animate-effect="lightSpeedIn">
             </div>
             <div class="page-6 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/11.jpg" alt="" swiper-animate-effect="flip">
+                <img class="ani" src="./assets/10.jpg" alt="" swiper-animate-effect="flip">
             </div>
             <div class="page-7 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/8.jpg" alt="" swiper-animate-effect="rotateInDownRight">
-                <img class="ani" src="./assets/9.jpg" alt="" swiper-animate-effect="pulse">
-                <img class="ani" src="./assets/10.jpg" alt="" swiper-animate-effect="rotateInUpLeft">
+                <img class="ani" src="./assets/4.jpg" alt="" swiper-animate-effect="rotateInDownRight">
+                <img class="ani" src="./assets/5.jpg" alt="" swiper-animate-effect="pulse">
+                <img class="ani" src="./assets/6.jpg" alt="" swiper-animate-effect="rotateInUpLeft">
             </div>
             <div class="page-8 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/14.jpg" alt="" swiper-animate-effect="flipInX">
+                <img class="ani" src="./assets/12.jpg" alt="" swiper-animate-effect="flipInX">
             </div>
             <div class="page-9 page swiper-slide">
                 <div class="filter"></div>
-                <img class="ani" src="./assets/16.jpg" alt="" swiper-animate-effect="flipInY">
+                <img class="ani" src="./assets/13.jpg" alt="" swiper-animate-effect="flipInY">
             </div>
         </div>
     </div>
     <div class="number fadeInRight animated">1/9</div>
     <canvas id="canvas1" height="520" width="300"></canvas>
     <canvas id="canvas2" height="520" width="300"></canvas>
-    <!-- <div class="loading-box">
-        <canvas id="loading" width="300" height="300"></canvas>
-    </div> -->
-    <!-- <canvas id="sakura"></canvas> -->
+    <div class="music-btn">
+        <img src="assets/music.png" alt="">
+        <div class="pause-sign"></div>
+    </div>
 </body>
 
 </html>
@@ -93,17 +97,33 @@
 
     //音频
     var audio = new Audio();
+    var musicState = true;
     var index = Math.floor(Math.random() * 4);
-    var songs = ['assets/audio/Friendships.mp3','assets/audio/C400001N8e5Q4Gjxda.mp3', 'assets/audio/C400004FjJo32TISsY.mp3', 'assets/audio/lost.mp3'];
+    var songs = ['assets/audio/Friendships.mp3', 'assets/audio/C400004FjJo32TISsY.mp3', 'assets/audio/lost.mp3'];
     audio.src = songs[index];   // songs[index]
     audio.autoplay = true;
+    $('.music-btn').addClass('rotates');
 
     document.addEventListener("WeixinJSBridgeReady", function () {
         audio.play();
+        $('.music-btn').addClass('rotates');
     }, false);
     audio.addEventListener('ended', function () {
         index += 1;
         audio.src = songs[(index % 4)];
+    })
+
+    $('.music-btn').click(function(){
+        if (musicState) {
+            $(this).removeClass('rotates')
+            $('.music-btn .pause-sign').show();
+            audio.pause();
+        } else {
+            $(this).addClass('rotates')
+            $('.music-btn .pause-sign').hide();
+            audio.play();
+        }
+        musicState = !musicState;
     })
 
     var colors = ['red', 'orange', 'cyan']; // , 'purple' 'blue', 'green', 
@@ -157,4 +177,11 @@
         })();
     }
     drawFreq(); 
+</script>
+<script>
+    window.onload = function( ) {
+       setTimeout(function() {
+           $('.loading-box').hide();
+       },200)
+    }
 </script>
