--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <div class="loading-box">
-        <img src="assets/loading.gif" alt="">
+        <img src="assets/timg.gif" alt="">
+        <span>拼命加载中···</span>
     </div>
     <div class="home">
         <div class="swiper-wrapper">
